# pyDDM

./: Building DDMs for the APC superfamily.ipynb  Clustermaps.ipynb  LeuT fold list of conformations w LAT1 KCC1 2023.xlsx  MANIFEST  PCA on the DDMs.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
data/: LeuT fold list of conformations w LAT1 KCC1 2023.xlsx  all_transitions.csv  hb_ddms.npy  pdbs_to_use.csv  reconstruction_loss.csv
data/uniprot/: D6R8X8.fa  O67854.fa  P54582.fa  P60063.fa  P96169.fa  Q9RTP8.fa
pyDDM/: __init__.py  ddm.py
