[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDDM"
version = "0.3.0"
authors = [
  { name="Sam Berry", email="sberry@g.harvard.edu" },
]
description = "Distance difference matrices and downstream analysis methods for comparing conformational changes in proteins"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "pandas", "scikit-learn", "scipy", "seaborn", "bioviper@git+https://github.com/samberry19/bioviper"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyDDM*"]

[tool.isort]
profile = "black"
src_paths = "pyDDM"
multi_line_output = 3

[tool.pydocstyle]
match_dir = "pyDDM"
convention = "numpy"

[project.urls]
"Homepage" = "https://github.com/GaudetLab/pyDDM"
"Bug Tracker" = "https://github.com/GaudetLab/pyDDM/issues"
